# vack

./: .gitignore  CMakeLists.txt  README.md
include/: Instruction.hpp  Machine.hpp  Value.hpp
src/: CMakeLists.txt  Machine.cpp  main.cpp
vack/: CMakeLists.txt
vack/docs/: Bytecode.md  Values.md
vack/include/: BytecodeReader.hpp  Instruction.hpp  Machine.hpp
vack/src/: BytecodeReader.cpp  CMakeLists.txt  Machine.cpp  main.cpp
vkasm/: CMakeLists.txt
vkasm/docs/: Instructions.md  structure.md
vkasm/examples/: 1.vkbc  HelloWorld.vkasm  add.vkasm  call.vkasm  goto.vkasm  if_eq.vkasm  sub.vkasm  swp.vkasm
vkasm/include/: BytecodeCreator.hpp  Lexer.hpp  Log.hpp  Token.hpp
vkasm/src/: BytecodeCreator.cpp  CMakeLists.txt  Lexer.cpp  Log.cpp  Token.cpp  main.cpp
vkasm/tests/: CMakeLists.txt
vkdisasm/: CMakeLists.txt
vkdisasm/src/: CMakeLists.txt  main.cpp
vkdisasm/tests/: CMakeLists.txt
